sumo/tests/sumo/output/vtypeprobe/errors/freq_negative/errors.sumo
Error: Negative frequency (in vTypeProbe 'test1').
Quitting (on error).
